--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
+  "homepage": "https://sebastianpiascik.github.io/mastermind",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "nodemon app"
   },
   "author": "",
@@ -14,7 +17,8 @@
     "express": "^4.16.4",
     "less-middleware": "^3.1.0",
     "morgan": "^1.9.1",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "gh-pages": "^2.1.1"
   },
   "devDependencies": {
     "errorhandler": "^1.5.0",
